--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://rmguttal.github.io/doozy",
+  "homepage": "https://rmguttal.github.io/doozy/",
   "name": "doozy",
   "version": "0.1.0",
   "private": true,
